@startuml
class Issue {
    Long id
    String title
    String description
    Priority priority
    Status status
    Member reporter
    Member assignee
    Member fixer
    Project project
    Boolean isDeleted
    List<Comment> comments
}

class IssueService {
    +List<IssueResponseDto> getRemoveRequestIssues(Long signId)
}

class IssueRepository {
    +List<Issue> findByStatusAndIsDeletedFalse(Status status)
}

class DtoConverter {
    +IssueResponseDto createIssueResponseDto(Issue issue)
}

IssueService --> IssueRepository
IssueService --> DtoConverter
Issue --> Project
Issue --> Member
Issue --> Comment
@enduml
